--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:ui": "cd ../../part2/phonebook && npm run build && cp -r dist ../../part3/phonebook",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
