--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "build:ui": "cd ../../part2/phonebook && npm run build && cp -r dist ../../part3/phonebook",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
