--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -6,7 +6,8 @@
     "dev": "nodemon index.js",
     "build:ui": "cd ../../part2/phonebook && npm run build && cp -r dist ../../part3/phonebook",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "Nemanja Milovanovic",
   "license": "ISC",
@@ -19,6 +20,10 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "@stylistic/eslint-plugin-js": "^2.3.0",
+    "eslint": "^9.6.0",
+    "globals": "^15.8.0",
     "nodemon": "^3.1.4"
   }
 }
