--- a/part4/blog/.env
+++ b/part4/blog/.env
@@ -1,2 +1,3 @@
 MONGODB_URL=mongodb+srv://nemanja:Ba63bJFPgm0SG63K@phonebook.bs3qjoi.mongodb.net/?retryWrites=true&w=majority&appName=Phonebook
+TEST_MONGODB_URL=mongodb+srv://nemanja:Ba63bJFPgm0SG63K@phonebook.bs3qjoi.mongodb.net/?retryWrites=true&w=majority&appName=Phonebook
 PORT=3003
