--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon index.js",
     "start": "NODE_ENV=production node index.js",
+    "start:test": "NODE_ENV=test node index.js",
     "test": "NODE_ENV=test node --test",
     "lint": "eslint ."
   },
