--- a/part7/blog/package.json
+++ b/part7/blog/package.json
@@ -11,8 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.2",
+    "@popperjs/core": "^2.11.8",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.4.0",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
